--- a/src/css/style.css
+++ b/src/css/style.css
@@ -666,7 +666,7 @@ button.paginationBlock__item {
 
 .slideTitle__text--red-white {
     color: #FBF8F6;
-    padding: 0 14px!important;
+    padding: 7px  14px 0 14px!important;
     background-color: #EB2E34;
 }
 
